# rl_environment

./: .dockerignore  Dockerfile  README.md  download_data.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
data/: bear_market.csv  bull_market.csv  sideways_market.csv
server/: app.py
